proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stolon-proxy
  namespace: sqlanalytics
spec:
  replicas: 2
  selector:
    matchLabels:
      component: stolon-proxy
      stolon-cluster: kube-stolon
  template:
    metadata:
      labels:
        component: stolon-proxy
        stolon-cluster: kube-stolon
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: stolon-proxy
          image: mayurnagekar/postgres-stolon:superset-db-test-12
          command:
            - "/bin/bash"
            - "-ec"
            - |
              exec gosu stolon stolon-proxy
          ports:
            - containerPort: 5432
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            timeoutSeconds: 5
