sentinel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stolon-sentinel
  namespace: sqlanalytics 
spec:
  replicas: 2
  selector:
    matchLabels:
      component: stolon-sentinel
      stolon-cluster: kube-stolon
  template:
    metadata:
      labels:
        component: stolon-sentinel
        stolon-cluster: kube-stolon
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: stolon-sentinel
          image: mayurnagekar/postgres-stolon:superset-db-test-12
          command:
            - "/bin/bash"
            - "-ec"
            - |
              exec gosu stolon stolon-sentinel
          ports:
            - containerPort: 8080
