proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stolon-proxy-service
  namespace: sqlanalytics
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: stolon-proxy
    stolon-cluster: kube-stolon
